--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "chart.js": "^4.4.6",
     "emailjs-com": "^3.2.0",
-    "rxjs": "~7.4.0",
+    "google-one-tap": "^1.0.6",
+    "rxjs": "^7.5.0",
     "swiper": "^11.1.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.3"
